Fixed #300 by allowing action from NPCs with the same owner data. Fixed #75, #216, #300 by allowing disabling of the trading screen and default dialog. Added new open default dialog Action Type. Added default `Open Trading Screen` and `Open Default Dialog` actions to the Interaction Action. Changed permission system to allow game masters (>= 2) and higher to use all actions without being the owner and/or in creative mode. Improved Action Overview screen for better usability.

--- a/Common/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -48,6 +48,7 @@
   "text.easy_npc.config.actionDataType.command": "Befehl",
   "text.easy_npc.config.actionDataType.interact_block": "Blockinteraktion",
   "text.easy_npc.config.actionDataType.none": "Keine",
+  "text.easy_npc.config.actionDataType.open_default_dialog": "Standarddialog öffnen",
   "text.easy_npc.config.actionDataType.open_named_dialog": "Öffne Dialog",
   "text.easy_npc.config.actionDataType.open_trading_screen": "Handelsbildschirm",
   "text.easy_npc.config.actions": "Aktionen",
@@ -175,14 +176,6 @@
   "text.easy_npc.config.import_world_preset": "Importiere Welt Vorlage",
   "text.easy_npc.config.is_attackable": "Angreifbar",
   "text.easy_npc.config.is_pushable": "Schiebbar",
-  "text.easy_npc.config.visible": "Sichtbar",
-  "text.easy_npc.config.visible_to_team": "Für Teammitglieder sichtbar",
-  "text.easy_npc.config.visible_to_owner": "Für Besitzer sichtbar",
-  "text.easy_npc.config.visible_at_night": "Sichtbar bei Nacht",
-  "text.easy_npc.config.visible_at_day": "Sichtbar bei Tag",
-  "text.easy_npc.config.visible_in_spectator": "Sichtbar im Zuschauermodus",
-  "text.easy_npc.config.visible_in_creative": "Sichtbar im Kreativmodus",
-  "text.easy_npc.config.visible_in_standard": "Sichtbar im Standardmodus",
   "text.easy_npc.config.knockback_resistance": "Rückstoß Widerstand",
   "text.easy_npc.config.label_id": "Beschriftung/Id",
   "text.easy_npc.config.light_level": "Lichtstufe (0-15)",
@@ -304,6 +297,14 @@
   "text.easy_npc.config.use_a_player_name": "Verwende einen Spielernamen",
   "text.easy_npc.config.use_a_skin_url": "Verwende eine Skin-URL",
   "text.easy_npc.config.value": "Wert",
+  "text.easy_npc.config.visible": "Sichtbar",
+  "text.easy_npc.config.visible_at_day": "Sichtbar bei Tag",
+  "text.easy_npc.config.visible_at_night": "Sichtbar bei Nacht",
+  "text.easy_npc.config.visible_in_creative": "Sichtbar im Kreativmodus",
+  "text.easy_npc.config.visible_in_spectator": "Sichtbar im Zuschauermodus",
+  "text.easy_npc.config.visible_in_standard": "Sichtbar im Standardmodus",
+  "text.easy_npc.config.visible_to_owner": "Für Besitzer sichtbar",
+  "text.easy_npc.config.visible_to_team": "Für Teammitglieder sichtbar",
   "text.easy_npc.config.water_avoiding_random_stroll": "Vermeide Wasser beim zufälligen Schlendern",
   "text.easy_npc.config.world_preset": "Welt",
   "text.easy_npc.config.world_preset_export.title": "Welt Vorgabe-Export",
