--- a/Common/src/main/resources/assets/easy_npc/lang/es_mx.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/es_mx.json
@@ -35,6 +35,13 @@
   "itemGroup.easy_npc.spawn_eggs": "EasyNPC - Generar",
   "text.easy_npc.armourers_workshop.no_support": "¡El modelo de piel %1$s para %2$s aún no es oficialmente compatible con Armourer's Workshop! Por favor, utiliza los modelos de piel recomendados oficialmente, como el modelo humanoid en su lugar.",
   "text.easy_npc.config.abilities": "Habilidades",
+  "text.easy_npc.config.actionDataType.close_dialog": "Cerrar diálogo",
+  "text.easy_npc.config.actionDataType.command": "Comando",
+  "text.easy_npc.config.actionDataType.interact_block": "Interactuar con bloque",
+  "text.easy_npc.config.actionDataType.none": "Ninguno",
+  "text.easy_npc.config.actionDataType.open_default_dialog": "Abrir diálogo predeterminado",
+  "text.easy_npc.config.actionDataType.open_named_dialog": "Abrir diálogo",
+  "text.easy_npc.config.actionDataType.open_trading_screen": "Abrir comercio",
   "text.easy_npc.config.actions": "Acciones",
   "text.easy_npc.config.add": "Agregar",
   "text.easy_npc.config.advanced": "Avanzado",
@@ -130,14 +137,6 @@
   "text.easy_npc.config.import_world_preset": "Importar Preset Mundial",
   "text.easy_npc.config.is_attackable": "Atacable",
   "text.easy_npc.config.is_pushable": "Empujable",
-  "text.easy_npc.config.visible": "Visible",
-  "text.easy_npc.config.visible_to_team": "Visible para los miembros del equipo",
-  "text.easy_npc.config.visible_to_owner": "Visible para el dueño",
-  "text.easy_npc.config.visible_at_night": "Visible de Noche",
-  "text.easy_npc.config.visible_at_day": "Visible de Día",
-  "text.easy_npc.config.visible_in_spectator": "Visible en Modo Espectador",
-  "text.easy_npc.config.visible_in_creative": "Visible en Modo Creativo",
-  "text.easy_npc.config.visible_in_standard": "Visible en Modo Estándar",
   "text.easy_npc.config.knockback_resistance": "Resistencia al Empuje",
   "text.easy_npc.config.label_id": "Etiqueta/ID",
   "text.easy_npc.config.light_level": "Nivel de Luz (0-15)",
@@ -246,6 +245,14 @@
   "text.easy_npc.config.url_skin": "URL",
   "text.easy_npc.config.use_a_player_name": "Usar un Nombre de Jugador",
   "text.easy_npc.config.use_a_skin_url": "Usar una URL de Skin",
+  "text.easy_npc.config.visible": "Visible",
+  "text.easy_npc.config.visible_at_day": "Visible de Día",
+  "text.easy_npc.config.visible_at_night": "Visible de Noche",
+  "text.easy_npc.config.visible_in_creative": "Visible en Modo Creativo",
+  "text.easy_npc.config.visible_in_spectator": "Visible en Modo Espectador",
+  "text.easy_npc.config.visible_in_standard": "Visible en Modo Estándar",
+  "text.easy_npc.config.visible_to_owner": "Visible para el dueño",
+  "text.easy_npc.config.visible_to_team": "Visible para los miembros del equipo",
   "text.easy_npc.config.water_avoiding_random_stroll": "Paseo Aleatorio Evitando Agua",
   "text.easy_npc.config.world_preset": "Mundial",
   "text.easy_npc.config.world_preset_import.title": "Importación de preajustes mundiales",
