--- a/Common/src/main/resources/assets/easy_npc/lang/zh_tw.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/zh_tw.json
@@ -45,6 +45,7 @@
   "text.easy_npc.config.actionDataType.command": "指令",
   "text.easy_npc.config.actionDataType.interact_block": "互動方塊",
   "text.easy_npc.config.actionDataType.none": "無",
+  "text.easy_npc.config.actionDataType.open_default_dialog": "打開預設對話框",
   "text.easy_npc.config.actionDataType.open_named_dialog": "開啟對話方塊",
   "text.easy_npc.config.actionDataType.open_trading_screen": "開啟交易",
   "text.easy_npc.config.actions": "動作",
@@ -167,14 +168,6 @@
   "text.easy_npc.config.import_world_preset": "匯入世界預設",
   "text.easy_npc.config.is_attackable": "可攻擊",
   "text.easy_npc.config.is_pushable": "可推動",
-  "text.easy_npc.config.visible": "可見",
-  "text.easy_npc.config.visible_to_team": "對隊伍成員可見",
-  "text.easy_npc.config.visible_to_owner": "對所有者可見",
-  "text.easy_npc.config.visible_at_night": "夜間可見",
-  "text.easy_npc.config.visible_at_day": "白天可見",
-  "text.easy_npc.config.visible_in_spectator": "旁觀模式中可見",
-  "text.easy_npc.config.visible_in_creative": "創造模式中可見",
-  "text.easy_npc.config.visible_in_standard": "標準模式中可見",
   "text.easy_npc.config.knockback_resistance": "抗擊退",
   "text.easy_npc.config.label_id": "標籤／ID",
   "text.easy_npc.config.light_level": "亮度等級 (0-15)",
@@ -295,6 +288,14 @@
   "text.easy_npc.config.use_a_player_name": "使用玩家名稱",
   "text.easy_npc.config.use_a_skin_url": "使用皮膚網址",
   "text.easy_npc.config.value": "值",
+  "text.easy_npc.config.visible": "可見",
+  "text.easy_npc.config.visible_at_day": "白天可見",
+  "text.easy_npc.config.visible_at_night": "夜間可見",
+  "text.easy_npc.config.visible_in_creative": "創造模式中可見",
+  "text.easy_npc.config.visible_in_spectator": "旁觀模式中可見",
+  "text.easy_npc.config.visible_in_standard": "標準模式中可見",
+  "text.easy_npc.config.visible_to_owner": "對所有者可見",
+  "text.easy_npc.config.visible_to_team": "對隊伍成員可見",
   "text.easy_npc.config.water_avoiding_random_stroll": "避開水隨機漫步",
   "text.easy_npc.config.world_preset": "世界",
   "text.easy_npc.config.world_preset_export.title": "世界預設匯出",
