--- a/Common/src/main/resources/assets/easy_npc/lang/zh_cn.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/zh_cn.json
@@ -48,6 +48,7 @@
   "text.easy_npc.config.actionDataType.command": "命令",
   "text.easy_npc.config.actionDataType.interact_block": "交互方块",
   "text.easy_npc.config.actionDataType.none": "无",
+  "text.easy_npc.config.actionDataType.open_default_dialog": "打开默认对话",
   "text.easy_npc.config.actionDataType.open_named_dialog": "打开对话框",
   "text.easy_npc.config.actionDataType.open_trading_screen": "打开交易",
   "text.easy_npc.config.actions": "行为",
@@ -176,14 +177,6 @@
   "text.easy_npc.config.import_world_preset": "导入世界预设",
   "text.easy_npc.config.is_attackable": "可被攻击",
   "text.easy_npc.config.is_pushable": "可被推动",
-  "text.easy_npc.config.visible": "可见",
-  "text.easy_npc.config.visible_to_team": "对团队成员可见",
-  "text.easy_npc.config.visible_to_owner": "对所有者可见",
-  "text.easy_npc.config.visible_at_night": "夜间可见",
-  "text.easy_npc.config.visible_at_day": "白天可见",
-  "text.easy_npc.config.visible_in_spectator": "旁观者模式可见",
-  "text.easy_npc.config.visible_in_creative": "创造模式可见",
-  "text.easy_npc.config.visible_in_standard": "标准模式可见",
   "text.easy_npc.config.knockback_resistance": "抗击退性",
   "text.easy_npc.config.label_id": "标签/Id",
   "text.easy_npc.config.light_level": "亮度等级 (0-15)",
@@ -305,6 +298,14 @@
   "text.easy_npc.config.use_a_player_name": "使用玩家名称",
   "text.easy_npc.config.use_a_skin_url": "使用URL皮肤",
   "text.easy_npc.config.value": "价值",
+  "text.easy_npc.config.visible": "可见",
+  "text.easy_npc.config.visible_at_day": "白天可见",
+  "text.easy_npc.config.visible_at_night": "夜间可见",
+  "text.easy_npc.config.visible_in_creative": "创造模式可见",
+  "text.easy_npc.config.visible_in_spectator": "旁观者模式可见",
+  "text.easy_npc.config.visible_in_standard": "标准模式可见",
+  "text.easy_npc.config.visible_to_owner": "对所有者可见",
+  "text.easy_npc.config.visible_to_team": "对团队成员可见",
   "text.easy_npc.config.water_avoiding_random_stroll": "游荡时避开水",
   "text.easy_npc.config.world_preset": "世界",
   "text.easy_npc.config.world_preset_export.title": "世界预设导出",
