Fixed #300 by allowing action from NPCs with the same owner data. Fixed #75, #216, #300 by allowing disabling of the trading screen and default dialog. Fixed up and down buttons. Fixed wrongly rendered selection for action data list and dialog list. Added new open default dialog Action Type. Added default `Open Trading Screen` and `Open Default Dialog` actions to the Interaction Action. Changed permission system to allow game masters (>= 2) and higher to use all actions without being the owner and/or in creative mode. Improved Action Overview screen for better usability.

--- a/Common/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -49,6 +49,7 @@
   "text.easy_npc.config.actionDataType.command": "Command",
   "text.easy_npc.config.actionDataType.interact_block": "Interact Block",
   "text.easy_npc.config.actionDataType.none": "None",
+  "text.easy_npc.config.actionDataType.open_default_dialog": "Open Default Dialog",
   "text.easy_npc.config.actionDataType.open_named_dialog": "Open Dialog",
   "text.easy_npc.config.actionDataType.open_trading_screen": "Open Trading",
   "text.easy_npc.config.actions": "Actions",
@@ -177,14 +178,6 @@
   "text.easy_npc.config.import_world_preset": "Import World Preset",
   "text.easy_npc.config.is_attackable": "Attackable",
   "text.easy_npc.config.is_pushable": "Pushable",
-  "text.easy_npc.config.visible": "Visible",
-  "text.easy_npc.config.visible_to_team": "Visible to Team Members",
-  "text.easy_npc.config.visible_to_owner": "Visible to Owner",
-  "text.easy_npc.config.visible_at_night": "Visible at Night",
-  "text.easy_npc.config.visible_at_day": "Visible at Day",
-  "text.easy_npc.config.visible_in_spectator": "Visible in Spectator Mode",
-  "text.easy_npc.config.visible_in_creative": "Visible in Creative Mode",
-  "text.easy_npc.config.visible_in_standard": "Visible in Standard Mode",
   "text.easy_npc.config.knockback_resistance": "Knockback Resistance",
   "text.easy_npc.config.label_id": "Label/Id",
   "text.easy_npc.config.light_level": "Light Level (0-15)",
@@ -306,6 +299,14 @@
   "text.easy_npc.config.use_a_player_name": "Use a Player Name",
   "text.easy_npc.config.use_a_skin_url": "Use a Skin URL",
   "text.easy_npc.config.value": "Value",
+  "text.easy_npc.config.visible": "Visible",
+  "text.easy_npc.config.visible_at_day": "Visible at Day",
+  "text.easy_npc.config.visible_at_night": "Visible at Night",
+  "text.easy_npc.config.visible_in_creative": "Visible in Creative Mode",
+  "text.easy_npc.config.visible_in_spectator": "Visible in Spectator Mode",
+  "text.easy_npc.config.visible_in_standard": "Visible in Standard Mode",
+  "text.easy_npc.config.visible_to_owner": "Visible to Owner",
+  "text.easy_npc.config.visible_to_team": "Visible to Team Members",
   "text.easy_npc.config.water_avoiding_random_stroll": "Water Avoiding Random Stroll",
   "text.easy_npc.config.world_preset": "World",
   "text.easy_npc.config.world_preset_export.title": "World Preset Export",
