Fixed #354 by adding missing hand item renderer for piglin models. Fixed #353 by adding additional checks for body part rendering. Fixed #351 by improving dialog and trade server-side checks. Fixed #350 by adding additional safety checks for text and translated text. Fixed #346 by making sure Trading data are correctly synced even with small changes. Fixed #340 by adding respawn command for single or several NPCs. Added custom attributes for NPCs to allow more complex behavior. Added smaller code optimizations and cleanup.

--- a/Common/src/main/resources/assets/easy_npc/lang/es_mx.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/es_mx.json
@@ -282,5 +282,5 @@
   "text.easy_npc.respawnNPC.confirmWarning": "¡El NPC '%s' reaparecerá como un nuevo NPC, pero con la misma configuración, posición y UUID!",
   "text.easy_npc.respawnNPC.respawnButton": "Reaparecer NPC",
   "text.easy_npc.trading": "Comercio",
-  "text.easy_npc.trading.busy": "El NPC está ocupado actualmente con otro comercio con %s.\n Por favor espera hasta que el comercio termine."
+  "text.easy_npc.trading.busy": "%1$s está ocupado actualmente con otro comercio con %2$s.\n Por favor espera hasta que el comercio termine."
 }
