--- a/Common/src/main/resources/assets/easy_npc/lang/zh_cn.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/zh_cn.json
@@ -340,5 +340,5 @@
   "text.easy_npc.respawnNPC.confirmWarning": "NPC'%s'将会作为新的NPC生成,但会保持原来的设置,位置和UUID!",
   "text.easy_npc.respawnNPC.respawnButton": "重新生成 NPC",
   "text.easy_npc.trading": "交易",
-  "text.easy_npc.trading.busy": "NPC目前正忙于与 %s.\n 交易,请等到交易完成."
+  "text.easy_npc.trading.busy": "%1$s目前正忙于与 %2$s.\n 交易,请等到交易完成."
 }
