Fixed #354 by adding missing hand item renderer for piglin models. Fixed #353 by adding additional checks for body part rendering. Fixed #351 by improving dialog and trade server-side checks. Fixed #350 by adding additional safety checks for text and translated text. Fixed #346 by making sure Trading data are correctly synced even with small changes. Fixed #340 by adding respawn command for single or several NPCs. Added custom attributes for NPCs to allow more complex behavior. Added smaller code optimizations and cleanup.

--- a/Common/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -340,5 +340,5 @@
   "text.easy_npc.respawnNPC.confirmWarning": "Der NPC '%s' wird als neuer NPC neu gespawnt, aber mit den gleichen Einstellungen, Position und UUID!",
   "text.easy_npc.respawnNPC.respawnButton": "NPC re-spawnen",
   "text.easy_npc.trading": "Handel",
-  "text.easy_npc.trading.busy": "Der NPC ist gerade mit einem anderen Handel mit %s beschäftigt.\n Bitte warte, bis der Handel beendet ist."
+  "text.easy_npc.trading.busy": "%1$s ist gerade mit einem anderen Handel mit %2$s beschäftigt.\n Bitte warte, bis der Handel beendet ist."
 }
