Fixed #362 by considering day/night for all days not only for the first day. Fixed #361 by adjusting wrong visibility for arms, hat and other model parts. Fixed #359 by making sure scaling and hitbox matching standard player models. Fixed #357 by replacing the slider with a dual-slider for better usability. Fixed #356 by resetting micro movements for NPCs. Fixed #331 by adding `Health Regeneration` attribute. Fixed #328 by setting `canBreatheUnderwater` to `true` for relevant NPCs and added 'Can Breathe Underwater' attribute Fixed slider sending multiple packets for the same value. Added dual-slider for better usability. Added combat attributes. Added environmental attributes. Added interaction attributes. Added movement attributes. Reduced the numbers of synched entity data by 10%.

--- a/Common/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -169,6 +169,7 @@
   "text.easy_npc.config.follow_range": "Folge Reichweite",
   "text.easy_npc.config.free_fall": "Freier Fall",
   "text.easy_npc.config.gun_attack": "Schusswaffen Angriff",
+  "text.easy_npc.config.health_regeneration": "Gesundheitsregeneration",
   "text.easy_npc.config.import": "▽ Importieren",
   "text.easy_npc.config.import_custom_preset": "Importiere benutzerdefinierte Vorlage",
   "text.easy_npc.config.import_default_preset": "Importiere Standard Vorlage",
