--- a/Common/src/main/resources/assets/easy_npc/lang/es_mx.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/es_mx.json
@@ -131,6 +131,7 @@
   "text.easy_npc.config.follow_range": "Rango de Seguimiento",
   "text.easy_npc.config.free_fall": "Caída Libre",
   "text.easy_npc.config.gun_attack": "Ataque con Arma de Fuego",
+  "text.easy_npc.config.health_regeneration": "Regeneración de salud",
   "text.easy_npc.config.import": "▽ Importar",
   "text.easy_npc.config.import_custom_preset": "Importar Preset Personalizado",
   "text.easy_npc.config.import_default_preset": "Importar Preset Estándar",
