--- a/Common/src/main/resources/assets/easy_npc/lang/zh_cn.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/zh_cn.json
@@ -170,6 +170,7 @@
   "text.easy_npc.config.follow_range": "跟随范围",
   "text.easy_npc.config.free_fall": "自由落体",
   "text.easy_npc.config.gun_attack": "持枪攻击",
+  "text.easy_npc.config.health_regeneration": "生命恢复",
   "text.easy_npc.config.import": "▽ 导入",
   "text.easy_npc.config.import_custom_preset": "导入自定义预设",
   "text.easy_npc.config.import_default_preset": "导入默认预设",
