Fixed #364 by adding additional checks and logging for entity data serialization and networking. Fixed #347 by adding additional network message related checks for Fabric/Quilt. Improved idle animation for arms and legs. Improved 'Move Back To Home' objective performance. Added 'Can Breathe Underwater' checkbox to the NPC configuration screen. Added new Knight 02 NPC skin.

--- a/Common/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -86,6 +86,7 @@
   "text.easy_npc.config.bow_attack": "Bogen Angriff",
   "text.easy_npc.config.button.name": "Name",
   "text.easy_npc.config.can_be_leashed": "Kann angeleint werden",
+  "text.easy_npc.config.can_breathe_underwater": "Unterwasseratmung",
   "text.easy_npc.config.can_close_door": "Tür schließen",
   "text.easy_npc.config.can_float": "Schwimmen",
   "text.easy_npc.config.can_open_door": "Tür öffen",
