Fixed #364 by adding additional checks and logging for entity data serialization and networking. Fixed #347 by adding additional network message related checks for Fabric/Quilt. Improved idle animation for arms and legs. Improved 'Move Back To Home' objective performance. Added 'Can Breathe Underwater' checkbox to the NPC configuration screen. Added new Knight 02 NPC skin.

--- a/Common/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -87,6 +87,7 @@
   "text.easy_npc.config.bow_attack": "Bow Attack",
   "text.easy_npc.config.button.name": "Name",
   "text.easy_npc.config.can_be_leashed": "Can be Leashed",
+  "text.easy_npc.config.can_breathe_underwater": "Underwater Breathing",
   "text.easy_npc.config.can_close_door": "Close door",
   "text.easy_npc.config.can_float": "Float",
   "text.easy_npc.config.can_open_door": "Open door",
